# hive-proc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  package.json
etc/init.d/: hive
lib/: flora-server.js  hive-cli.js  hiveproc.js  pre-load.js
preset/: host.js  yodaos.js
script/: apt-get-install-deps  build  ci-deps  clean  install  install-shadow-node  pull-deps  test
src/: addon.cc  addon.hh  helper-inl.hh  helper.hh  hivecli.cc  hivecli.hh  hiveproc.cc  hiveproc.hh  logger.h
test/: echo-server.cc  echo-server.test.js  hive.test.js  process.test.js  sigchld.test.js
test/children/: http-cli.js
