cmake_minimum_required(VERSION 3.0)
project(yoda-hive-proc CXX)
set(CMAKE_CXX_STANDARD 11)

include(ExternalProject)
find_package(Git REQUIRED)
string(REPLACE ";" "|" CMAKE_PREFIX_PATH_ALT_SEP "${CMAKE_PREFIX_PATH}")
string(REPLACE ";" "|" CMAKE_INCLUDE_PATH_ALT_SEP "${CMAKE_INCLUDE_PATH}")
string(REPLACE ";" "|" CMAKE_LIBRARY_PATH_ALT_SEP "${CMAKE_LIBRARY_PATH}")
ExternalProject_Add(hive
  PREFIX ${CMAKE_BINARY_DIR}/hive
  GIT_REPOSITORY https://github.com/yodaos-project/hive.git
  GIT_TAG flora
  TIMEOUT 10
  UPDATE_COMMAND ${GIT_EXECUTABLE} pull
  LOG_DOWNLOAD ON
  LIST_SEPARATOR | # Use the alternate list separator
  CMAKE_ARGS
    -DLIBFFI_LINK_EXTERNAL=YES
    -DNODEJS_VARIANT=${NODEJS_VARIANT}
    -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
    -DCMAKE_PREFIX_PATH=${CMAKE_PREFIX_PATH_ALT_SEP}
    -DCMAKE_INCLUDE_PATH=${CMAKE_INCLUDE_PATH_ALT_SEP}
    -DCMAKE_LIBRARY_PATH=${CMAKE_LIBRARY_PATH_ALT_SEP}
    -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/node_modules/hive
    # cross-compiling
    -DCMAKE_SYSROOT=${CMAKE_SYSROOT}
    -DCMAKE_SYSTEM_PERFIX_PATH=${CMAKE_SYSTEM_PERFIX_PATH}
    -DCMAKE_STAGING_PERFIX=${CMAKE_STAGING_PERFIX}
    -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
    -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
    -DCMAKE_SYSTEM_PROCESSOR=${CMAKE_SYSTEM_PROCESSOR}
)

install(DIRECTORY etc DESTINATION "${CMAKE_INSTALL_PREFIX}")
install(DIRECTORY lib DESTINATION "${CMAKE_INSTALL_PREFIX}")
install(FILES package.json DESTINATION "${CMAKE_INSTALL_PREFIX}")
